--- a/design/templates/design/responsivepeople.html
+++ b/design/templates/design/responsivepeople.html
@@ -7,7 +7,7 @@
     </div>
 </div>
     <div class='row text-center'>
-        <div class="card col-12 col-mg-6 col-lg-4">
+        <div class="card col-12 col-md-6 col-lg-4">
             <div class="card">
                 <img class="card-img" src="/static/img/gates.jpg" alt="Card image">
             </div>
@@ -22,7 +22,7 @@
                 </blockquote>
             </div>
         </div>
-        <div class="card col-12 col-mg-6 col-lg-4">
+        <div class="card col-12 col-md-6 col-lg-4">
             <div class="card">
                 <img class="card-img" src="/static/img/pichai.jpg" alt="Card image">
             </div>
@@ -37,7 +37,7 @@
                 </blockquote>
             </div>
         </div>
-        <div class="card col-12 col-mg-6 col-lg-4">
+        <div class="card col-12 col-md-6 col-lg-4">
             <div class="card">
                 <img class="card-img" src="/static/img/watson.jpg" alt="Card image">
             </div>
@@ -52,7 +52,7 @@
                 </blockquote>
             </div>
         </div>
-        <div class="card col-12 col-mg-6 col-lg-4">
+        <div class="card col-12 col-md-6 col-lg-4">
             <div class="card">
                 <img class="card-img" src="/static/img/dr.jpg" alt="Card image">
             </div>
@@ -67,7 +67,7 @@
                 </blockquote>
             </div>
         </div>
-        <div class="card col-12 col-mg-6 col-lg-4">
+        <div class="card col-12 col-md-6 col-lg-4">
             <div class="card">
                 <img class="card-img" src="/static/img/chris.jpg" alt="Card image">
             </div>
@@ -82,7 +82,7 @@
                 </blockquote>
             </div>
         </div>
-        <div class="card col-12 col-mg-6 col-lg-4">
+        <div class="card col-12 col-md-6 col-lg-4">
             <div class="card">
                 <img class="card-img" src="/static/img/evan.jpg" alt="Card image">
             </div>
